# BooyerMoore

./: .gitignore  README.md  boyer-moore.docx  file.txt  pyproject.toml  restults2.txt
booyer_moore/: search.py  text.txt  text_generator.py  text_grouping.py  text_visualization.py  utils.py
booyer_moore/final/: main.py  text.txt
tests/: results.xlsx
tests/raw results/: 1000_wrk.txt  100_wrk.txt  10_wrk.txt  1_wrk.txt  3_wrk_def.txt
tests/results_by_length_of_pattern/: 10_len.txt  1_len.txt  20_len.txt  2_len.txt  30_len.txt  3_len.txt  40_len.txt  4_len.txt  50_len.txt  5_len.txt  performancetest.txt
tests/results_by_length_of_pattern/raw_results/: length_1.txt  length_10.txt  length_2.txt  length_20.txt  length_3.txt  length_30.txt  length_4.txt  length_40.txt  length_5.txt  length_50.txt
tests/results_by_workers/: 1000_wrk.txt  100_wrk.txt  10_wrk.txt  1_wrk.txt  3_wrk.txt  prerformance.txt
tests/results_by_workers/results_raw/: prerformance_in_nanoseconds.txt
