[tool.poetry]
name = "booyer-moore"
version = "0.1.0"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "booyer_moore"}]

[tool.poetry.dependencies]
python = "^3.10"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
